# open-rcs

./: .gitignore  README.md  automatic_compare.py  gif.py  openrcs.py  output_validation.py  pyproject.toml  rcs_bistatic.py  rcs_functions.py  rcs_monostatic.py  stl_module.py  thread_trace.py
.github/workflows/: ci.yml
docs/: Demo.ipynb
examples/: Demo.ipynb  profile_sphere_monostatic.py  rcs_widget_demo.py  sphere_inmemory_notebook_demo.py  sphere_notebook_demo.py
materials/: default_library.rcsmat
src/open_rcs/: __init__.py  constants.py  guidance.py  io.py  materials.py  model_types.py  notebook_ui.py  plotting.py  profiling.py  rcs_bistatic.py  rcs_functions.py  rcs_monostatic.py  stl_module.py
tests/: test_guidance.py  test_material_library_yaml.py  test_materials.py  test_model_types.py  test_notebook_ui.py  test_profiling.py  test_rcs_integration.py  test_rcs_math_helpers.py  test_solver_workflows.py  test_stl_module.py
